src/sass/master.scss
body {
  margin: 0;
}

header {
  background: #444;
  color: white;
  margin: 0;
  height: 40px;
}

header h1 {
  display: inline;
}

main {
  width: 100%;
  position: fixed;
  top: 40px;
  left: 250px;
}

.info {
  background-color: #222;
  color: white;
  left: 0px;
  top: 40px;
  position: fixed;
  width: 250px;
  padding: 10px;
  height: 100%;

  h3 {
    border-bottom: 1px solid #333;
  }
  p {
    height: 50px;
  }
}

.map {
  width: 100%;
  height: 600px;
}

circle {
  transition: fill 0.2s ease;
}
circle:hover {
  fill: tomato;
}

